# X-Entropy

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README.txt  files.txt  meta.yaml  setup.py
.github/workflows/: c-cpp.yml  python.yml
DihedralEntropy.egg-info/: PKG-INFO  SOURCES.txt
conda/: channeldata.json  index.html
conda/linux-64/: current_repodata.json  current_repodata.json.bz2  entropy-3.1a-np111py38_0.tar.bz2  (+14 more)
entropy/: __init__.py  dihedrals.py  entropy.py  kde.py  kde_front.py  resolution.py  reweighting.py
examples/: XEntropy-example0-kde.ipynb  XEntropy-example1-dihedral_entropy.ipynb  XEntropy_example0_artificial_binodal_distribution.ipynb  XEntropy_example1_artificial_binodal_distribution_w_entropy.ipynb  entroPy_example0_artificial_binodal_distribution.ipynb  entroPy_example0_artificial_binodal_distribution_w_entropy.ipynb
package/: CMakeLists.txt  meta.yaml  setup.py
package/src/: kde.cpp  kde.h
package/tests_cpp/: CMakeLists.txt  Gce_Tester.cpp  Integrator_Tester.cpp  KDE_Tester.cpp
package/xentropy/: __init__.py  constants.py  dihedrals.py  kde.py  reweighting.py  xentropy.py
package/xentropy/internal/: __init__.py  constants.py  pre_post_processing.py
package/xentropy/kde_kernel/: kde_kernel.pyx
src/: CMakeLists.txt  DihedralEntropy.cpp  DihedralEntropy.h  ExceptionTranslators.h  Exceptions.h  Integrators.cpp  Integrators.h  Module.cpp  OMPExceptionHandler.h  PyGCE.h  kde.cpp  kde.h
tests_cpp/: CMakeLists.txt  Gce_Tester.cpp  Integrator_Tester.cpp  Makefile  testapp  testapp.REMOVED.git-id
xentropy/: dihedrals.py
(+133 files in other folders)
